--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,3 +1,4 @@
 <p>
-  &copy; {{ site.time | date: "%Y" }} {{ site.author }} 
+  Website copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} |
+  <span class="credit">Powered by <a href="http://octopress.org">Octopress</a> | Themed with <a href="https://github.com/TheChymera/Koenigspress">Königspress</a></span>
 </p>
